# VLUI

./: .gitignore  README.md  README_WEB.md  RUN_DASHBOARD.py  pyproject.toml
configs/: experiment_baseline.yaml
data/: sample_porto.csv
output/real_benchmark/: summary.csv
output/scale/: scaling_curve.csv
output/scale/10000/: summary.csv
output/scale/100000/: summary.csv
output/scale/20000/: summary.csv
output/scale/5000/: summary.csv
output/window_sweep/: window_results.csv
paper/: main.tex
scripts/: collect_scaling_curve.py  compare_datasets.py  gen_sample_porto.py  live_benchmark.py  live_dashboard.py  run_all.py  run_grid_sweep.py  run_nyc_benchmark.py  run_real_benchmark.py  run_window_sweep.py  start_web_dashboard.py  web_dashboard.py
scripts/templates/: evaluator.html  index.html
src/: __init__.py
src/analysis/: sprt.py
src/benchmark/: executor.py  run_experiment.py  visualize.py
src/datasets/: loaders.py
src/generators/: adversarial.py  base.py  moving_hotspot.py  real_dataset.py  uniform.py  zipf_spatial.py
src/indexes/: base.py  buffered_rtree.py  grid_btree.py  lchi_index.py  learned_grid.py  lsm_spatial.py  rtree_index.py
src/metrics/: controlled_cri.py  cri.py
src/models/: spatial.py
tests/: test_generators.py  test_web_dashboard_api.py
